--- a/env.example
+++ b/env.example
@@ -10,15 +10,24 @@ ACCESS_TOKEN_EXPIRE_MINUTES=60
 CORS_ORIGINS=["http://localhost:8080","http://localhost:3000"]
 ALLOWED_HOSTS=["localhost","127.0.0.1","*"]
 
-# Email
-SENDGRID_API_KEY=
+# Email (Brevo - formerly Sendinblue)
+BREVO_API_KEY=
 EMAIL_FROM=noreply@mahasewa.org
+EMAIL_FROM_NAME=MahaSeWA
+EMAIL_REPLY_TO=info@mahasewa.org
 
 # AWS S3
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_S3_BUCKET=mahasewa-files
 AWS_REGION=ap-south-1
+
+# Razorpay Payment Gateway
+RAZORPAY_KEY_ID=
+RAZORPAY_KEY_SECRET=
+
+# Google Maps (Optional - for geocoding)
+GOOGLE_MAPS_API_KEY=
 
 # Redis
 REDIS_URL=redis://localhost:6379/0
