--- a/requirements.txt
+++ b/requirements.txt
@@ -25,8 +25,8 @@ slowapi==0.1.9  # Rate limiting for FastAPI
 boto3==1.34.34
 botocore==1.34.34
 
-# Email
-sendgrid==6.11.0
+# Email (Brevo - formerly Sendinblue)
+sib-api-v3-sdk==8.5.0
 python-dotenv==1.0.1
 
 # Redis
@@ -43,4 +43,10 @@ pytz==2024.1
 
 # Monitoring (optional)
 sentry-sdk[fastapi]==1.40.0
+
+# Payment Gateway
+razorpay==1.4.2
+
+# PDF Generation
+weasyprint==60.2
 
